// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateCell component DateCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container input-date-picker-wrapper-read-only table--cell-value--date-readonly"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-date-picker-input-read-only"
                    name="data"
                    placeholder="MMM DD, YYYY"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="Apr 03, 2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DateCell component DateCell renders in edit mode and handles change 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-date-picker-input"
                    name="data"
                    placeholder="MMM DD, YYYY"
                    tabindex="0"
                    type="text"
                    value="Apr 03, 2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DateCell component DateCell renders in edit mode via extra 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-date-picker-input"
                    name="data"
                    placeholder="MMM DD, YYYY"
                    tabindex="0"
                    type="text"
                    value="Apr 03, 2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DateCell component DateCell renders when hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container input-date-picker-wrapper-read-only table--cell-value--date-readonly"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-date-picker-input-read-only"
                    name="data"
                    placeholder="MMM DD, YYYY"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="Apr 03, 2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DateCell component DateCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container input-date-picker-wrapper-read-only table--cell-value--date-readonly"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-date-picker-input-read-only"
                    name="data"
                    placeholder="MMM DD, YYYY"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="Apr 04, 2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
